--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /*!
-* Start Bootstrap - Creative v7.0.5 (https://startbootstrap.com/theme/creative)
+* Start Bootstrap - Creative v7.0.5
 * Copyright 2013-2021 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-creative/blob/master/LICENSE)
+* Licensed under MIT 
 */
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
